deploy/jenkins/jenkins-networking.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    app: jenkins
  name: jenkins-http-proxy
  namespace: jenkins
spec:
  routes:
  - services:
    - name: jenkins
      port: 8080
    conditions:
    - prefix: /
  virtualhost:
    fqdn: jenkins.tanzudemo.frankcarta.com
